--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,12 @@ main {
   text-align: justify;
 }
 
+@media all and (max-width: 500px) {
+  .contact-form {
+    width: 100%;
+  }
+}
+
 .contact-form textarea,
 .contact-form input {
   width: 100%;
@@ -111,7 +117,7 @@ main {
 }
 
 .contact-form label {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: var(--semibold);
 }
 
